04_kubernetes_crud/dz4/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    dz: dz4
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  type: LoadBalancer
