04_kubernetes_crud/dz4/templates/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  type: LoadBalancer
